VDR Plugin 'epgsearch' Revision History
---------------------------------------

2010-xx-xx; Version 0.9.25
new:
- vdr-1.7.15 has changed the SVDRP default port to 6419, please update this in epgsearch's 
  setup menu too!
- support for vdr-1.7.12 and later
- there is now an official git repository for epgsearch, that contains the latest 
  development. 
  First usage: 
    git clone git://projects.vdr-developer.org/vdr-plugin-epgsearch.git	
  Keep up-to-date with:
    git pull
  Web-git:
    http://projects.vdr-developer.org/git/?p=vdr-plugin-epgsearch.git
  many thanks to the maintainers of projects.vdr-developer.org, especially Tobias 
  Grimm
- directory entries from VDR's folders.conf are now also read and offered in the 
  directory selection of the timer menu.
- Search timer support for content descriptors as introduced in vdr-1.7.11. This lets you
  search for broadcasts by their type, like "Movie/Drama", "Documentation",...
- Search timers now have a new action "Announce and switch". This announces the
  event via OSD right before it starts and lets you switch to its channel with 'Ok'.
  Switch timers now have the same option.
- in addition to the announcements via OSD new events can now also be reported by mail.
  To do so, there's a new search timer action "Announce by mail". You also have to update 
  your mail template file epgsearchupdmail.templ (s. the updated html sample in the conf 
  directory and/or read the MANUAL '13. Email notification').
- The time in hours between the search timer mails can now be configured in the 
  setup to avoid flooding your inbox. epgsearch buffers the contents of the pending mails
  in the new file pendingnotifications.conf.
- New setup option to check if there is EPG content for the next x hours. If not 
  you get warned by OSD and/or mail (Setup -> Search and search timers), suggested by 
  Andreas Mair.
- new internal variables:
  * %day%, %month% and %year% which return the numeric day, month and year