@@ -647,6 +647,19 @@ timer (like modifying start/stop or deleting a timer) in the conflict details
 menu also cause an immediate return to the overview menu and produce an
 update. 
 
+Note:
+There's a 'hidden' setup option epgsearch.ConflCheckCmd, that allows executing a 
+command for each timer causing a conflict. You have to set this directly in VDRs
+setup.conf like this:
+
+epgsearch.ConflCheckCmd = system(your_script_handling_the_conflict.sh, any_arguments like %timer.file%)
+
+(Please have a look at 'Calling a system command' below for the possible arguments)
+One could use this for example to forward a timer to another VDR machine in case of a conflict.
+This command is evaluated for each timer causing a conflict whenever an automatic
+conflict check is running. When calling the conflict check via OSD the command is not
+evaluated.
+
 =head1 12. User defined variables
 
 You can create your own variables to be used in any place that supports
