@@ -3,6 +3,8 @@ VDR Plugin 'epgsearch' Revision History
 
 2010-xx-xx; Version 0.9.25
 new:
+- new setup variable epgsearch.ConflCheckCmd (no gui for this, so edit setup.conf!), that 
+  allows executing a command for each timer causing a conflict, see the MANUAL for details.
 - vdr-1.7.15 has changed the SVDRP default port to 6419, please update this in epgsearch's 
   setup menu too!
 - support for vdr-1.7.12 and later
